# GameServer

./: .gitignore  CMakeLists.txt  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: Doxyfile
docs/html/: menudata.js
docs/html/search/: searchdata.js
docs/latex/: refman.tex
docs/source/: Doxyfile  conf.py  index.rst
docs/source/docs/xml/: Doxyfile.xml  conf_8py.xml  index.xml  namespaceconf.xml
include/: CachupaServer.h  MessageHandler.h  Room.h  Support.h
include/Controllers/: Event.h  GameHandler.h
include/Network/: Server.h
include/Parser/: GameData.h  PrimitiveTypes.h  RuleExecute.h  RuleParser.h  RulesInterpreterStructs.h  RulesInterpreter_old.h  TreeSitter.h
include/State/: Audience.h  Game.h  GameState.h  GameState1.cpp  Player.h  main.cpp
src/: CMakeLists.txt  CachupaServer.cpp  MessageHandler.cpp  main.cpp
src/Controllers/: CMakeLists.txt
src/Network/: CMakeLists.txt  Server.cpp
src/Parser/: CMakeLists.txt  GameData.cpp  RuleParser.cpp  TreeSitter.cpp
src/State/: Audience.cpp  CMakeLists.txt  Game.cpp  GameState.cpp  Player.cpp
test/: CMakeLists.txt  GameTest.cpp  IndiTestGameServer.cpp  PlayerTest.cpp  ServerTest.cpp  TestGameServer.cpp
